--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "banner"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.19.0",
+    "camelcase": "^1.2.1",
     "chalk": "^1.0.0",
+    "yeoman-generator": "^0.19.0",
     "yosay": "^1.0.2"
   },
   "devDependencies": {
