Add standard banner option
The workflow doesn't just make a DoubleClick banner now. A "standard banner" option, which uses a 'clickTag' variable has been added.

Signed-off-by: John Morton <john@johnfmorton.com>

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   ],
   "keywords": [
     "yeoman-generator",
+    "standard banner",
+    "clickTag",
     "doubleclick",
     "advertising",
     "gulp",
