--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-buildabanner",
-  "version": "0.1.8",
-  "description": "Yeoman generator to get an HTML DoubleClick banner started using Gulp",
+  "version": "0.1.9",
+  "description": "Yeoman generator to get an HTML banner, standard or DoubleClick Studio, started using Gulp",
   "license": "MIT",
   "main": "app/index.js",
   "repository": "johnfmorton/generator-buildabanner",
