--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-buildabanner",
-  "version": "0.3.0",
-  "description": "Yeoman generator to start an HTML banner, standard, DoubleClick Studio, or TruEffect using Gulp",
+  "version": "0.4.0",
+  "description": "Yeoman generator to start an HTML banner, standard, Adwords, DoubleClick Studio, or TruEffect using Gulp",
   "license": "MIT",
   "main": "app/index.js",
   "repository": {
@@ -23,6 +23,7 @@
     "yeoman-generator",
     "standard banner",
     "clickTag",
+    "adwords",
     "doubleclick",
     "trueffect",
     "advertising",
