--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
   ],
   "dependencies": {
     "camelcase": "^1.2.1",
-    "chalk": "^1.0.0",
-    "download": "^4.2.0",
+    "chalk": "^1.1.1",
+    "download": "^4.4.3",
     "yeoman-generator": "^0.19.0",
-    "yosay": "^1.0.2"
+    "yosay": "^1.1.0"
   },
   "devDependencies": {
-    "mocha": "*"
+    "mocha": "^2.4.3"
   }
 }
