--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-buildabanner",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "Yeoman generator to start an HTML banner, standard, Adwords, DoubleClick Studio, or TruEffect using Gulp",
   "license": "MIT",
   "main": "app/index.js",
@@ -26,6 +26,7 @@
     "adwords",
     "doubleclick",
     "trueffect",
+    "sizemek",
     "advertising",
     "gasp",
     "gulp",
