--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-buildabanner",
-  "version": "0.10.4",
+  "version": "0.11.0",
   "description": "Yeoman generator to start an HTML banner, standard, Adwords, DoubleClick Studio, or TruEffect using Gulp",
   "license": "MIT",
   "main": "app/index.js",
@@ -33,13 +33,13 @@
     "banner"
   ],
   "dependencies": {
-    "camelcase": "^1.2.1",
-    "chalk": "^1.1.1",
-    "download": "^4.4.3",
-    "yeoman-generator": "^0.19.0",
-    "yosay": "^1.1.0"
+    "yeoman-generator": "^3.0.0"
   },
   "devDependencies": {
-    "mocha": "^2.4.3"
+    "camelcase": "^5.0.0",
+    "chalk": "^2.4.1",
+    "download": "^7.0.0",
+    "gulp": "^3.9.1",
+    "yosay": "^2.0.2"
   }
 }
